--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Royce Nguyen</h1>
     <p>Hi! I'm Royce Nguyen and my major is Data Science. I'm currently a second year and I'm a first generation Vietnamese-American</p>
+    <img>src='images/germansheperdpup.jpg' alt = "German Shepherd Puppy"<img>
+    
+
 </body>
 </html>
