--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Royce Nguyen: Personal site and portfolio</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <h1>Royce Nguyen</h1>
     <p>Hi! I'm Royce Nguyen and my major is Data Science. I'm currently a second year and I'm a first generation Vietnamese-American</p>
-    <img src='images/germansheperdpup.jpg' alt = "German Shepherd Puppy" img>
-
+    <img src='images/germansheperdpup.jpg' alt="German Shepherd Puppy">
 
 </body>
 </html>
