--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Projects</h1>
     <nav>
+        <a href="index.html">Home</a>
+        <a href= "projects/index.html">Projects</a>
+        <a href = "contact/index.html">Contact</a>
         <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
     </nav>
 </body>
