--- a/contact/index.html
+++ b/contact/index.html
@@ -13,5 +13,16 @@
         <a href = "index.html">Contact</a>
         <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
     </nav>
+    <form action = "mailto:roycenguyen1111@gmail.com" method = "POST" enctype = "text/plain">
+        <label>Email</label>
+        <input name = "email" type = "email">
+        <label>Subject</label>
+        <input name = "subject">
+        <label>Body</label>
+        <textarea name = "body">
+        </textarea> 
+        <button></button>
+    </form>
+    
 </body>
 </html>
