--- a/contact/index.html
+++ b/contact/index.html
@@ -21,8 +21,7 @@
         <label>Body</label>
         <textarea name = "body">
         </textarea> 
-        <label>Submit</label>
-        <button></button>
+        <button>Submit</button>
     </form>
     
 </body>
