--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
     <h1>Contact</h1>
@@ -11,6 +11,7 @@
         <a href= "../index.html">Home</a>
         <a href= "../projects/index.html">Projects</a>
         <a href = "index.html">Contact</a>
+        <a href= "../resume/index.html">Resume</a>
         <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
     </nav>
     <form action = "mailto:roycenguyen1111@gmail.com" method = "POST" enctype = "text/plain">
