--- a/resume/index.html
+++ b/resume/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Resume</title>
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1>Resume</h1>
     <nav>
         <a href="../index.html">Home</a>
-        <a href= "index.html">Projects</a>
+        <a href= "../projects/index.html">Projects</a>
         <a href = "../contact/index.html">Contact</a>
-        <a href = "../resume/index.html">Resume</a>
+        <a href="index.html">Resume</a>
         <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
     </nav>
 </body>
+
 </html>
