--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <a href="index.html">Home</a>
         <a href= "projects/index.html">Projects</a>
         <a href = "contact/index.html">Contact</a>
+        <a href="resume/index.html">Resume</a>
         <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
     </nav>
+    
 </body>
 </html>
