--- a/resume/index.html
+++ b/resume/index.html
@@ -14,6 +14,9 @@
         <a href="index.html">Resume</a>
         <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
     </nav>
+    <header>
+        <h1>Royce Nguyen</h1>
+    </header>
 </body>
 
 </html>
