--- a/resume/index.html
+++ b/resume/index.html
@@ -110,6 +110,24 @@
             </p>
           </article>
     </section>
+    <section>
+        <h2>Technical Skills</h2>
+        <article>
+            <p>
+                Languages: Java, Python, C#, R, SQL
+            </p>
+            <p>
+                Frameworks: JUnit, Django
+            </p>
+            <p>
+                Developer Tools: Unity, Git, Visual Studio Code, Jupyter Notebook, IntelliJ, Microsoft Excel
+            </p>
+            <p>
+                Libraries: pandas, NumPy, Matplotlib, Plotly, OpenAI API, sklearn, seaborn, BeautifulSoup4
+            </p>
+            
+        </article>
+    </section>
 </body>
 
 </html>
