--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Royce Nguyen: Personal site and portfolio</title>
-    <link rel = "stylesheet" href = "style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Royce Nguyen: Personal site and portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Royce Nguyen</h1>
-    <p>Hi! I'm Royce Nguyen and my major is Data Science. I'm currently a second year and I'm a first generation Vietnamese-American</p>
-    <img src='images/germansheperdpup.jpg' alt="German Shepherd Puppy">
-    <nav>
-        <a href="index.html">Home</a>
-        <a href= "projects/index.html">Projects</a>
-        <a href = "contact/index.html">Contact</a>
-        <a href="resume/index.html">Resume</a>
-        <a href = "https://github.com/roynguyenn" target = "_blank">My Github</a>
-    </nav>
-    
+  <nav>
+    <a class="current" href="index.html">Home</a>
+    <a href="projects/index.html">Projects</a>
+    <a href="contact/index.html">Contact</a>
+    <a href="resume/index.html">Resume</a>
+    <a href="https://github.com/roynguyenn" target="_blank">My Github</a>
+  </nav>
+  <h1>Royce Nguyen</h1>
+  <p>Hi! I'm Royce Nguyen and my major is Data Science. I'm currently a second year and I'm a first generation Vietnamese-American</p>
+  <img src='images/germansheperdpup.jpg' alt="German Shepherd Puppy">
 </body>
 </html>
