--- a/projects/index.html
+++ b/projects/index.html
@@ -7,13 +7,7 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-    <a href="../index.html">Home</a>
-    <a class="current" href="index.html">Projects</a>
-    <a href="../contact/index.html">Contact</a>
-    <a href="../resume/index.html">Resume</a>
-    <a href="https://github.com/roynguyenn" target="_blank">My Github</a>
-  </nav>
+  
   <h1>Projects</h1>
   <div class="projects">
     <article>
@@ -77,6 +71,6 @@
         <p>Suscipit eligendi asperiores autem sint praesentium magni magnam cum nisi sapiente nobis, eaque velit unde fugit! Quibusdam iste qui accusamus iusto? Et veniam delectus tempore repellat rem sequi similique distinctio?</p>
     </article>
   </div>  
-
+  <script type="module" src="../global.js"></script>
 </body>
 </html>
