--- a/resume/index.html
+++ b/resume/index.html
@@ -9,13 +9,7 @@
 </head>
 <body class="resume-page">
   <!-- Main Navigation -->
-  <nav>
-    <a href="../index.html">Home</a>
-    <a href="../projects/index.html">Projects</a>
-    <a href="../contact/index.html">Contact</a>
-    <a class="current" href="index.html">Resume</a>
-    <a href="https://github.com/roynguyenn" target="_blank">My Github</a>
-  </nav>
+  
 
   <!-- Page Content -->
   <header>
@@ -107,5 +101,6 @@
       <p>Libraries: pandas, NumPy, Matplotlib, Plotly, OpenAI API, sklearn, seaborn, BeautifulSoup4</p>
     </article>
   </section>
+  <script type="module" src="../global.js"></script>
 </body>
 </html>
