--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a class="current" href="index.html">Home</a>
-    <a href="projects/index.html">Projects</a>
-    <a href="contact/index.html">Contact</a>
-    <a href="resume/index.html">Resume</a>
-    <a href="https://github.com/roynguyenn" target="_blank">My Github</a>
-  </nav>
   <h1>Royce Nguyen</h1>
   <p>Hi! I'm Royce Nguyen and my major is Data Science. I'm currently a second year and I'm a first generation Vietnamese-American</p>
   <img src='images/germansheperdpup.jpg' alt="German Shepherd Puppy">
+  <script type="module" src="global.js"></script>
+
 </body>
 </html>
