--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <p>Hi! I'm Royce Nguyen and my major is Data Science. I'm currently a second year and I'm a first generation Vietnamese-American</p>
   <img src='images/germansheperdpup.jpg' alt="German Shepherd Puppy">
   <script type="module" src="global.js"></script>
-
+  <h2>Latest Projects</h2>
+  <div class="projects">
+    <script src="index.js" type="module" defer></script>
+  </div>
+  <div id="profile-stats"> 
+    <script src="index.js" type="module" defer></script>
+  </div>
 </body>
 </html>
