--- a/projects/index.html
+++ b/projects/index.html
@@ -1,76 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
+    
+    <h1 class="projects-title">Projects</h1>
+    
   
-  <h1>Projects</h1>
-  <div class="projects">
-    <article>
-        <h2>Lorem ipsum dolor sit.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor et ipsum dolores asperiores repudiandae aliquam eveniet, eum exercitationem tempora nemo. Commodi, facilis! Repellat dolorem dolore nobis, qui illo quibusdam earum!</p>
-    </article>
-    <article>
-        <h2>Veniam labore aut reiciendis?</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Laudantium iste maxime velit ad error molestias. Eius in molestias pariatur voluptatibus. Quas quaerat culpa illo fugiat placeat saepe, ipsam possimus quam perspiciatis vitae rerum, est sunt. Placeat, facere dolorem.</p>
-    </article>
-    <article>
-        <h2>Aspernatur nam porro rerum.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Animi, tempora nobis magnam quasi maiores officiis quos rerum voluptatum, optio quae quod mollitia! Quae dignissimos repudiandae suscipit temporibus? Voluptas saepe nisi possimus dolore vel voluptatibus rerum iure pariatur odio.</p>
-    </article>
-    <article>
-        <h2>Officia tempore qui eum.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Expedita sequi laborum fuga blanditiis. Accusantium eos et cumque hic molestias dolores commodi quo rem suscipit consequatur! Consequuntur magnam soluta enim. Totam error suscipit, voluptas quas optio tenetur labore harum.</p>
-    </article>
-    <article>
-        <h2>Unde repellat consequatur odit.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Necessitatibus quibusdam ut accusantium culpa facilis omnis obcaecati hic laudantium illo recusandae ipsa incidunt tenetur totam odit ab error sapiente assumenda esse eum voluptatibus doloremque, harum reprehenderit? Tempora, accusamus earum?</p>
-    </article>
-    <article>
-        <h2>Illo fugiat alias enim.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Rerum sequi quia dolor maiores, labore, alias sit dolore illum excepturi nulla, ratione nihil. Commodi labore repellendus impedit repudiandae nemo voluptatem quod nisi harum mollitia dolor, eveniet qui, saepe fugit.</p>
-    </article>
-    <article>
-        <h2>Nobis non repudiandae ipsum!</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Aperiam nobis hic, minima alias iusto iste laborum? Tenetur autem minus, quidem reprehenderit, dolore possimus, sed illo atque cumque illum quis nam tempora ex magnam dicta cupiditate fuga magni est.</p>
-    </article>
-    <article>
-        <h2>Repudiandae qui deleniti quia?</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Blanditiis facilis omnis eaque magni dicta velit enim sint rerum fuga provident dolorem numquam possimus hic, iste incidunt dolorum ducimus qui illo maiores doloremque asperiores nesciunt quidem voluptatem nemo. Consequuntur!</p>
-    </article>
-    <article>
-        <h2>Neque quibusdam numquam blanditiis.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Expedita sequi fugit at quo dolores voluptate nulla aliquid nemo! Molestiae id quam provident blanditiis veniam, similique ab eligendi cumque iure, ipsum ullam est pariatur praesentium vel reiciendis culpa deleniti!</p>
-    </article>
-    <article>
-        <h2>Dicta deserunt numquam eius.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Ut placeat nulla autem tempora, ratione maxime minima beatae quae tempore, rerum alias assumenda facere similique! Minus libero ratione magni, accusamus beatae deserunt nobis, natus at nam quas voluptate odit.</p>
-    </article>
-    <article>
-        <h2>Consequuntur consequatur laboriosam libero?</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Possimus odit suscipit expedita est accusamus aliquid eum eos perspiciatis quidem, numquam porro quae, veniam maxime reprehenderit quod sed perferendis quibusdam. Assumenda nesciunt asperiores quidem quam tempore. Dicta, perferendis sit!</p>
-    </article>
-    <article>
-        <h2>Laboriosam sapiente reiciendis dolorem.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Suscipit eligendi asperiores autem sint praesentium magni magnam cum nisi sapiente nobis, eaque velit unde fugit! Quibusdam iste qui accusamus iusto? Et veniam delectus tempore repellat rem sequi similique distinctio?</p>
-    </article>
-  </div>  
-  <script type="module" src="../global.js"></script>
+    <!-- Projects container is now empty -->
+    <div class="projects"></div>
+
+    <!-- Load helper + page script -->
+    <script type="module" src="../global.js"></script>
+    <script type="module" src="projects.js"></script>
 </body>
 </html>
