--- a/meta/index.html
+++ b/meta/index.html
@@ -37,10 +37,12 @@
   </dl>
 
   <!-- finally, load your D3‐driven script -->
-  <script type="module" src="./main.js"></script>
 
     <p id="selection-count">No commits selected</p>
     <dl id="language-breakdown" class="stats"></dl>
+    
+    <script type="module" src="main.js"></script>
+    <script type="module" src="../global.js"></script>
 
 </body>
 </html>
